# ai_song

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
ai_song/: __init__.py  __main__.py  _faiss_worker.py  convert.py  download.py  evaluate.py  mix.py  separate.py  transpose.py  utils.py
tests/: __init__.py  test_download.py
